Fixed some layout issues with admin

--- a/packages/Webkul/Admin/src/Resources/assets/sass/app.scss
+++ b/packages/Webkul/Admin/src/Resources/assets/sass/app.scss
@@ -13,6 +13,7 @@ body {
     font-weight: 500;
     position: static;
     min-height: 100%;
+    width: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -93,49 +94,10 @@ body {
     }
 }
 
-.close-nav-aside {
-    display: block;
-    position: absolute;
-    top: 36px;
-    left: 260px;
-    height: 45px;
-    width: 45px;
-    padding: 10px;
-    text-align: center;
-    border: 1px solid $border-color;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.open-nav-aside {
-    display: none;
-    position: absolute;
-    top: 36px;
-    left: 68px;
-    height: 45px;
-    width: 45px;
-    padding: 10px;
-    text-align: center;
-    border: 1px solid $border-color;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.close-nav-aside:hover, .open-nav-aside:hover {
-    background: $brand-color;
-}
-
-.open-nav-aside, .close-nav-aside {
-    .icon {
-        height: 24px;
-        width: 24px;
-    }
-}
-
 .navbar-left {
-    position: absolute;
-    top: 60px;
-    bottom: 0;
+    position: sticky;
+    top: 0;
+    // bottom: 0;
     width: 90px;
     padding-top: 20px;
     height: auto;
@@ -143,6 +105,8 @@ body {
     z-index: 2;
 
     ul.menubar {
+        // padding-bottom: 60px;
+
         li.menu-item {
             height: 90px;
             padding: 10px 5px;
@@ -161,6 +125,21 @@ body {
             }
         }
     }
+
+    .open-nav-aside {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 90px;
+        padding: 18px;
+        text-align: center;
+        border: 1px solid $border-color;
+
+        .icon {
+            height: 24px;
+            width: 24px;
+        }
+    }
 }
 
 .content-container {
@@ -171,7 +150,12 @@ body {
     right: 0;
     left: 0;
     bottom: 0px;
-    overflow-y: auto;
+    min-height: calc(100% - 60px);
+    width: 100%;
+
+    .inner-section {
+        height: 100%;
+    }
 
     .aside-nav {
         width: 280px;
@@ -179,12 +163,31 @@ body {
         top: 60px;
         bottom: 0;
         border-right: 1px solid $border-color;
-        background: #f8f9fa;
+        background: $background-color;
         padding-top: 10px;
+        padding-bottom: 10px;
         z-index: 4;
 
         ul {
             overflow-y: auto;
+            height: 90%;
+        }
+
+        .close-nav-aside {
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+            border: 1px solid $border-color;
+
+            .icon {
+                height: 24px;
+                width: 24px;
+            }
+        }
+
+        .close-nav-aside:hover {
+            background: white;
+            cursor: pointer;
         }
 
         a {
